# Pro-g-rammingChallenges4

./: .gitattributes  .gitignore  README.md  completed.md  pyproject.toml  pytest.ini  requirements-ci.txt  requirements.txt
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: autodocs.yml  black.yml  ci.yml  java-format.yml  keep-streamlit-alive.yml  main.yml  requirements-sync.yml  test.yml
Algorithmic/: README.md  requirements.txt  solution_review.md
Algorithmic/1000 Digits of Pi/: README.md  pi.py
Algorithmic/Caesar Cipher/: caesar.py
Algorithmic/Character Counter/: README.md  charcount.py
Algorithmic/Digits of Pi/: DigitPi.py  README.md  pi_test.txt
Algorithmic/Djikstra/: README.md  dijkstra.py  test_dijkstra.py
Algorithmic/FizzBuzz/: fizzbuzz.c  fizzbuzz.py  test_fizzbuzz.py
Algorithmic/Game of life/: conway.py
Algorithmic/Highest prime factor/: README.md
Algorithmic/Least Squares Fitting/: README.md  lsf.c  lsf.m  lsf.py  lsfc.m
Algorithmic/MBR/: mbr.py
Algorithmic/Mandelbrot Set/: README.md  mandel.py  test_mandel.py
Algorithmic/Music Visualizer/: mv.py  test_mv.py
Algorithmic/PassGen/: README.md  passgen.py
Algorithmic/ROT 13/: rot13.py  test_rot13.py
Algorithmic/RPN Calculator/: README.md  postifx_evaluator.py
Algorithmic/Rumkin Ciphers/: README.md  atbash.py
Algorithmic/Sierpinski/: test_triangle.py
Algorithmic/Steganography/: test_steg.py
Algorithmic/Towers of Hanoi/: README.md  ToH.js  ToH.py  ToH_visualizer.py  test_toh.py
Algorithmic/Ulam Spiral/: README.md  ulam.py
Algorithmic/Vigniere Cipher/: vig.py
Algorithmic/Web Page Crawler/: wpc.py
Algorithmic/basic text encoding/: README.md  txtToHexAndBin.py
Algorithmic/ytmp3/: cringe.py
Artificial Intelligence/: README.md  requirements.txt
Artificial Intelligence/AI Roguelike/: README.md
Artificial Intelligence/Basic Neural Network/: BNN.py
Artificial Intelligence/CNN_Framework/: README.md
Artificial Intelligence/CNN_Scratch/: cnn.py  data.py  evaluate.py  train.py
Artificial Intelligence/Connect4/: c4.py
Artificial Intelligence/OpenAI Gym/: README.md  train.py
Artificial Intelligence/Real Neural Network/: README.md  data.py  evaluate.py  mlp.py  train.py
Artificial Intelligence/Sudoku/: astar.py
Emulation/: README.md  __init__.py  requirements.txt
Emulation/5 color scheme/: 5cs.py
Emulation/ASCII_Clock/: ClockNotSynced.py  ClockSynced.py
Emulation/CellularTextures/: cell.cpp
Emulation/Chip8/: README.md  cli.py  cpu.py  display.py  input.py  memory.py
Emulation/ConstructiveSolidGeometry/: README.md  __init__.py  cli.py  csg.py  export_examples.py
Emulation/DoublePendulum/: README.md  simulate.py
Emulation/EulerianPath/: fleury.java  hierholzer.py  naive.cpp
Emulation/FFTSpectrum/: README.md  fft_spectrum.py
Emulation/LambertsProblem/: cli.py  lambert.py
Emulation/NBodySimulator/: README.md  simulator.py
Emulation/RayTracer/: README.md  __init__.py  raytracer.py
Emulation/SpinnyCube/: cube.css  spinny.html  spinny.js  spinny.py
Emulation/TI86/: README.md  emulator.py
Games/: README.md  __init__.py  requirements.txt  solution_review.md
Games/64kDemo/: README.md  build.py
Games/Breakout/: README.md  breakout.py  level_editor.py
Games/Chess/: README.md  __init__.py  __main__.py  ai.py  board.py  cli.py  move.py  pgn.py  pygame_ui.py
Games/Connect4/: connect4.java  connect4.py
Games/DanmakuEngine/: README.md  package-lock.json  package.json
Games/Go/: README.md  go.py  logic.py
Games/Knight Tour/: README.md  knight.py
Games/Mastermind/: README.md  mastermind_cli.py  mastermind_gui.py  mastermind_logic.py
Games/Minesweeper/: mine.py
Games/MissileCommand/: README.md  missile_command.py
Games/Monster Raising/: README.md  main.py  monster_data.py  simulation.py
Games/MultiAgentTag/: README.md  analyze_runs.py  tag_sim.py
Games/OilPanic/: README.md  high_scores.json  oil_panic.py
Games/Pacman/: README.md  config.json  main.py
Games/Pipe Dreams/: README.md  package-lock.json  package.json  vite.config.ts
Games/RPGEngine/: README.md
Games/RPS/: README.md  rps.html  rps.java  rps.js  rpsls.py
Games/Roguelike/: README.md  config.py  content.py  engine.py  entity.py  game_map.py  input_handlers.py  main.py  message_log.py  render.py  storage.py  tiles.py
Games/ScorchedEarth/: README.md  scorched_earth.py
Games/Shuffle/: README.md  cards.py
Games/Simon/: README.md  simon.py
Games/Snake/: README.md  snake.css  snake.html  snake.py
Games/Sudoku/: sudoku.py
Games/Tetris/: README.md  __init__.py  board.py  input_handler.py  main.py  renderer.py  settings.py
Games/Tron/: README.md  index.html  tron.js
Games/UnityEngine/: README.md
Games/WolfensteinClone/: README.md  game.py
Games/Yahtzee/: README.md  yahtzee.java  yahtzee.py
Pending/: pending.txt
Practical/: README.md  app.py  requirements.txt  review_report.md
Practical/AutoSave Text Editor/: aste.py
Practical/Bayesian Filter/: iris.py
Practical/Bellman Ford Simulation/: README.md  (+4 more)
challenges/: __init__.py
challenges/Games/FirstPersonEngine/: CMakeLists.txt  README.md
challenges/Games/FirstPersonEngine/config/: controls.json
challenges/Games/FirstPersonEngine/include/: Camera.h  Input.h  Level.h  Renderer.h  Shader.h  Texture.h  VRHooks.h
challenges/Games/FirstPersonEngine/src/: Input.cpp  Level.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VRHooks.cpp  main.cpp
docs/: artificial_intelligence_review.md  debugging.md  emulation_review.md  git-lfs.md  repo-organization.md
simple_vcs/: __init__.py  __main__.py
tests/: __init__.py  test_ai_roguelike_smoke.py  test_chip8_cpu.py  test_cipher_visualizer.py  test_cli_help.py  test_cnn_framework.py  test_constructive_solid_geometry.py  test_double_pendulum.py  test_download_manager_chunked.py  test_fft_spectrum.py  test_file_compression_backend.py  test_fizzbuzz.py  test_img_to_ascii_convert.py  test_mbr_visualizer.py  test_nbody.py  test_raytracer.py  test_stock_prices.py  test_wolfenstein_clone.py
tools/: build_native.py  sync_requirements.py
(+882 files in other folders)
